@@ -52,6 +52,7 @@ Version 1.0.xxxx (February xxth 2014)
 - Implemented: Razberry Voltage/Ampere
 - Changed: ZWave, Power sensors that does not transmit usage, now used as power instead of usage 
 - Fixed: Problem in requesting devices when a Voltage device was queried (after this device no more where retrieved)
+- Implemented: New General Voltage devices with 3 decimals
 
 Version 1.0.1396 (January 18th 2014)
 - Implemented: new commandline option to specify www root folder (-wwwroot)
